--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Exposure Calculator</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   </head>
-  <body>
+  <body class= "">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
